# past

./: .gitignore  README.md  makefile  package.json  tsup.config.ts
core/: .gitignore  CMakeLists.txt  Makefile  core.h  main.cpp
core/emitter/: emitter.cpp  emitter.h
core/ir/: expressions.cpp  ir.cpp  ir.h  statements.cpp  variables.cpp
core/modules/: modules.h
core/tests/inputs/: ast.json
core/tests/variables/: variables.test.cpp
scripts/: build-native.js
src/: index.ts
src/bindings/: CmakeLists.txt  binding.gyp  index.d.ts  index.js
src/bindings/src/: main.cpp
src/bindings/src/binder/: binder.cpp  binder.h
src/bindings/src/compiler/: compiler.cpp  compiler.h
src/bindings/src/emitter/: emitter.cpp  emitter.h
src/bindings/src/helpers/: helpers.h
src/bindings/src/nodes/: literals.h  programs.h  variables.h
src/constants/: index.ts
src/emitter/: index.ts
src/types/: index.ts  literals.ts
tests/: index.ts
